added basic design, buttons, animation.

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
 body {
-    background-color: #8083c9;
+    background-color: #ff8787;
 }
 
-.my-row {
-    border: red solid 3px;
-    width: 80%
-}
+/*.my-row {*/
+/*    border: green solid 1px;*/
+/*    box-sizing: border-box;*/
+/*}*/
 
-.my-col {
-    border: blue dotted 3px;
-}
+/*.my-col {*/
+/*    border: blue dotted 1px;*/
+/*    box-sizing: border-box;*/
+/*}*/
